<resources>
    <string name="app_name">Test</string>
    <string name="title_promotion_detail">Promotion Detail</string>
    <string name="capital_social">capital social</string>
    <string name="login_textview_ingresa">o ingresa tu correo o contraseña</string>
    <string name="password">Contraseña</string>
    <string name="username">Usuario</string>
    <string name="login_olvidaste"><u>¿Has olvidado tu contraseña?</u></string>
    <string name="register">Regístrate</string>
    <string name="login">Ingresar</string>
    <string name="login_facebook">Inicia Sesión con Facebook</string>

    <string name="lorem">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</string>
</resources>
